# ros2_ws

./: .gitignore  251213_AE_HUB_MVP_Status_v1.1.docx  ENDPOINT_FIX.md  Mail_Aliaksandr_to_Katja_EN.md  NAV2_MODULE_IMPROVEMENT_PLAN.txt  QUICK_NAVIGATION_GUIDE.txt  Readme.md  SPECIFICATION.md  SRS_AE_HUB_MVP_Draft_0_3_EN (1).md  SRS_AE_HUB_MVP_Draft_0_3_EN.md  Technical_Specification_AROC_Connector_EN.md  Written_Coordination_Plan_EN.md  autostart_full_stack.sh  check_executor.sh  hardware_api.json  mqtt.json  mqtt_service.json  nav2Adapter.txt  nodes.txt  params_bt_navigator_list.txt  symovo doc.json  tatus -sb  test_step1_smoke.sh  update.txt
config/: aehub_nav2.env.example  (+4 more)
src/aehub_broker_credentials/: CMakeLists.txt  INSTALL.md  README.md  STATUS.md  ament_flake8.ini  package.xml  setup.cfg  setup.py
src/aehub_broker_credentials/config/: broker_credentials.yaml
src/aehub_broker_credentials/launch/: broker_credentials.launch.py
src/aehub_broker_credentials/test/: test_broker_client.py
src/aehub_composite_readiness/: CMakeLists.txt  README.md  package.xml
src/aehub_composite_readiness/src/: composite_readiness_gate.cpp
src/aehub_composite_readiness/test/: test_composite_readiness_gate.cpp
src/aehub_mqtt_protocol_adapter/: CMakeLists.txt  package.xml  setup.py
src/aehub_mqtt_protocol_adapter/launch/: mqtt_protocol_adapter.launch.py
src/aehub_mqtt_transport/: CMakeLists.txt  README.md  package.xml  setup.py
src/aehub_mqtt_transport/config/: mqtt_mapping.v1.yaml
src/aehub_mqtt_transport/launch/: mqtt_transport.launch.py
src/aehub_msgs/: CMakeLists.txt  package.xml
src/aehub_msgs/action/: NavigationExecute.action
src/aehub_msgs/msg/: BrokerConfig.msg  CommandAck.msg  CommandResult.msg  MapStatus.msg  MqttEnvelope.msg  NavigationCommand.msg  NavigationEvent.msg  NavigationState.msg  NavigationStatus.msg  RobotStatus.msg
src/aehub_msgs/srv/: CreateStation.srv  DeleteStation.srv  GetStation.srv  ListStations.srv  UpdateStation.srv
src/aehub_nav2_adapter/: CHECKLIST_COMPLIANCE.md  CMakeLists.txt  COMPILATION_FIXES.md  CPPLINT.cfg  README.md  SRS_COMPLIANCE_FIXES.md  TEST_MATRIX.md  package.xml
src/aehub_nav2_adapter/launch/: nav2_adapter.launch.py
src/aehub_nav2_adapter/src/: nav2_adapter_node.cpp
src/aehub_nav2_adapter/test/: SRS_TEST_COVERAGE.md  smoke_test_nav2_adapter.cpp  test_helpers.cpp  test_helpers.hpp  test_nav2_adapter_matrix.cpp  test_nav2_adapter_unit.cpp
src/aehub_nav2_capability_server/: CMakeLists.txt  package.xml
src/aehub_nav2_capability_server/launch/: nav2_capability_server.launch.py
src/aehub_nav2_capability_server/src/: main.cpp  nav2_capability_server_node.cpp
src/aehub_nav2_capability_server/test/: test_capability_gating.cpp  test_stack_smoke.cpp
src/aehub_nav2_gazebo/: package.xml  setup.cfg  setup.py
src/aehub_nav2_gazebo/launch/: gazebo_nav2.launch.py
src/aehub_nav2_gazebo/params/: nav2_params.yaml
src/aehub_nav2_gazebo/resource/: aehub_nav2_gazebo
src/aehub_nav2_gazebo/urdf/: amr.urdf
src/aehub_nav2_gazebo/worlds/: open_space.world
src/aehub_nav2_localization_orchestrator/: CMakeLists.txt  SRS.md  package.xml  setup.py
src/aehub_nav2_localization_orchestrator/resource/: aehub_nav2_localization_orchestrator
src/aehub_nav2_localization_orchestrator/test/: test_nav2_localization_orchestrator_integration.py
src/aehub_nav2_readiness/: ARCHITECTURAL_DECISIONS.md  ARCHITECTURE.md  CMakeLists.txt  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_V2.md  FINAL_CRITICAL_FIXES.md  FINAL_FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  package.xml
src/aehub_nav2_readiness/src/: action_sensor.cpp  lifecycle_checker.cpp  lifecycle_sensor.cpp  nav2_readiness_gate.cpp  tf_sensor.cpp  world_snapshot.cpp
src/aehub_nav2_readiness/test/: test_helpers.cpp  test_helpers.hpp  test_readiness_gate.cpp
src/aehub_navigation/: CMakeLists.txt  README.md  ament_flake8.ini  package.xml  setup.cfg  setup.py
src/aehub_navigation/config/: nav2_symovo_params.yaml  positions.yaml
src/aehub_navigation/launch/: aehub_navigation.launch.py  sim_loopback_nav2.launch.py  symovo_nav2.launch.py
src/aehub_navigation/resource/: aehub_navigation
src/aehub_navigation/src/: nav2_action_client.cpp  position_registry.cpp
src/aehub_navigation/test/: README.md  __init__.py
src/aehub_navigation_backend/: CMakeLists.txt  package.xml  setup.py
src/aehub_navigation_backend/config/: navigation_targets.yaml.example
src/aehub_navigation_backend/resource/: aehub_navigation_backend
src/aehub_navigation_executor/: CMakeLists.txt  README.md  package.xml  setup.py
src/aehub_navigation_executor/config/: fastdds_udp_only.xml
src/aehub_navigation_executor/docs/: E2E_SMOKE_MQTT_TO_ROBOT.md  NAV2_TF_SMOKE.md
src/aehub_navigation_executor/launch/: full_mqtt_gazebo_sitl.launch.py  full_mqtt_loopback_sim.launch.py  full_mqtt_machine_owned.launch.py  full_mqtt_navigation_stack.launch.py  mqtt_stack.launch.py
src/aehub_navigation_executor/systemd/: aehub-navigation-executor.service.example
src/aehub_robot_readiness/: CMakeLists.txt  README.md  package.xml
src/aehub_robot_readiness/config/: robot_interface_readiness_symovo.yaml
src/aehub_robot_readiness/launch/: robot_interface_readiness.launch.py
src/aehub_robot_readiness/src/: cmd_vel_watcher.cpp  odom_watcher.cpp  robot_readiness_gate.cpp  robot_readiness_monitor_node.cpp  safety_watcher.cpp
src/aehub_robot_readiness/test/: test_robot_readiness_gate.cpp
src/aehub_station_adapter/: CMakeLists.txt  package.xml  setup.py
src/aehub_station_adapter/launch/: station_adapter.launch.py
src/aehub_station_adapter/resource/: aehub_station_adapter
src/aehub_station_adapter/test/: test_symovo_station_client_unit.py
src/aehub_symovo_map_mirror/: CMakeLists.txt  README.md  SRS.md  package.xml  setup.py
src/aehub_symovo_map_mirror/resource/: aehub_symovo_map_mirror
src/aehub_symovo_map_mirror/test/: test_symovo_api_client_parsing.py  test_symovo_map_geometry.py  (+1 more)
src/base_controller/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  package.xml
src/symovo_bridge/: CMakeLists.txt  __init__.py
(+2589 files in other folders)
