<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aehub_nav2_capability_server</name>
  <version>0.1.0</version>
  <description>AE.HUB Navigation Capability (C++) - sole owner of Nav2, readiness, STOP, and /cmd_vel</description>
  <maintainer email="boris@example.com">Boris</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <!-- AE.HUB interfaces -->
  <depend>aehub_msgs</depend>

  <!-- Canonical capability + readiness -->
  <depend>aehub_nav2_adapter</depend>
  <depend>aehub_nav2_readiness</depend>
  <depend>aehub_robot_readiness</depend>
  <depend>aehub_composite_readiness</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

