<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aehub_navigation</name>
  <version>0.1.0</version>
  <description>AE.HUB MVP Navigation - Nav2 Action Client, MQTT Adapter, Position Registry</description>
  <maintainer email="boris@example.com">Boris</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- External dependencies -->
  <depend>yaml-cpp</depend>

  <!-- MQTT (Python) -->
  <exec_depend>paho-mqtt</exec_depend>
  
  <!-- HTTP client for Config Service -->
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-mock</test_depend>
  <test_depend>python3-responses</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

