cmake_minimum_required(VERSION 3.8)
project(aehub_navigation_backend)

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

ament_python_install_package(${PROJECT_NAME}
  PACKAGE_DIR src/${PROJECT_NAME}
)

install(PROGRAMS
  src/${PROJECT_NAME}/navigation_backend_server_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME navigation_backend_server
)

install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}/
  OPTIONAL
)

install(DIRECTORY config
  DESTINATION share/${PROJECT_NAME}/
  OPTIONAL
)

ament_package()

